welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: reassignment to val
	if (n=93 || n=90 || n=89) { 
             ^